--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
           <p id="playcurrentlevel" onclick="game.restartLevel();">
             <img src="images/icons/prev1.png" /> Replay Current Level
           </p>
-          <p id="playnextlevel" onclick="game.startNextLevel();" style="display: none;">
+         <p id="playnextlevel" onclick="game.startNextLevel();">
             <img src="images/icons/next.png" /> Play Next Level
           </p>
           <p id="showLevelScreen" onclick="game.returnLevel();">
