Added Italian Foods

--- a/food.html
+++ b/food.html
@@ -58,29 +58,152 @@
             <!-- Italian food starts here-->
             <div class="w3-row-padding">
                 <div class="w3-third w3-container w3-margin-bottom Italian">
-                    <img src="https://estaticos.muyinteresante.es/media/cache/760x570_thumb/uploads/images/article/55365cd73787b2187a1f0790/portada.jpg" alt="Food" style="width: 100%;" class="w3-hover-opacity" />
+                    <img src="img/itFood1.png" alt="Food" style="width: 100%;" class="w3-hover-opacity" />
                     <div class="w3-container w3-white">
-                        <p><b>Italian</b></p>
+                        <p><b>Pizza</b></p>
+                        <p class="w3-opacity"><i>Category:Main Course</i></p>
                         <p>
-                            hola tum, porta lectus vitae, ultricies congue gravida diam non fringilla.
+                            Pizza is made of a flattened base of leavened wheat-based dough topped with tomatoes, cheese, and various other ingredients.
                         </p>
                     </div>
                 </div>
                 <div class="w3-third w3-container w3-margin-bottom Italian">
-                    <img src="https://estaticos.muyinteresante.es/media/cache/760x570_thumb/uploads/images/article/55365cd73787b2187a1f0790/portada.jpg" alt="Food" style="width: 100%;" class="w3-hover-opacity" />
+                    <img src="img/itFood2.png" alt="Food" style="width: 100%;" class="w3-hover-opacity" />
                     <div class="w3-container w3-white">
-                        <p><b>Italian</b></p>
+                        <p><b>Parmigiana</b></p>
+                        <p class="w3-opacity"><i>Category:Main Course</i></p>
                         <p>
-                            my tincidunt sed tellus ut rutrum. Sed vitae justo condimentum, porta lectus vitae, ultricies congue gravida diam non fringilla.
+                            Parmigiana is an Italian dish made with fried, sliced eggplant layered with cheese and tomato sauce, then baked.
                         </p>
                     </div>
                 </div>
                 <div class="w3-third w3-container Italian">
-                    <img src="https://estaticos.muyinteresante.es/media/cache/760x570_thumb/uploads/images/article/55365cd73787b2187a1f0790/portada.jpg" alt="Food" style="width: 100%;" class="w3-hover-opacity" />
+                    <img src="img/itFood3.png" alt="Food" style="width: 100%;" class="w3-hover-opacity" />
                     <div class="w3-container w3-white">
-                        <p><b>Italian</b></p>
+                        <p><b>Carbonara</b></p>
+                        <p class="w3-opacity"><i>Category:Main Course</i></p>
                         <p>
-                            hi tellus ut rutrum. Sed vitae justo condimentum, porta lectus vitae, ultricies congue gravida diam non fringilla.
+                            Carbonara is an Italian pasta dish from Rome made with egg, hard cheese (parmigiano reggiano), cured pork, and black pepper.
+                        </p>
+                    </div>
+                </div>
+                <div class="w3-third w3-container Italian">
+                    <img src="img/itFood4.png" alt="Food" style="width: 100%;" class="w3-hover-opacity" />
+                    <div class="w3-container w3-white">
+                        <p><b>Panzerotto</b></p>
+                        <p class="w3-opacity"><i>Category:Main Course</i></p>
+                        <p>
+                            A panzerotto is a savory turnover which resembles a small calzone, both in shape and dough used for its preparation.
+                        </p>
+                    </div>
+                </div>
+                <div class="w3-third w3-container Italian">
+                    <img src="img/itFood5.png" alt="Food" style="width: 100%;" class="w3-hover-opacity" />
+                    <div class="w3-container w3-white">
+                        <p><b>Risotto</b></p>
+                        <p class="w3-opacity"><i>Category:Main Course</i></p>
+                        <p>
+                            Risotto is a Italian rice dish cooked with broth until it reaches a creamy consistency. The broth can be derived from meat, fish, or vegetables.
+                        </p>
+                    </div>
+                </div>
+                <div class="w3-third w3-container Italian">
+                    <img src="img/itFood6.png" alt="Food" style="width: 100%;" class="w3-hover-opacity" />
+                    <div class="w3-container w3-white">
+                        <p><b>Tiramisù</b></p>
+                        <p class="w3-opacity"><i>Category:Dessert</i></p>
+                        <p>
+                            Tiramisu is a coffee-flavoured Italian dessert. It is made of ladyfingers (savoiardi) dipped in coffee, layered with a whipped mixture of eggs, sugar, and mascarpone cheese, flavoured with cocoa.
+                        </p>
+                    </div>
+                </div>
+                <div class="w3-third w3-container Italian">
+                    <img src="img/itFood7.png" alt="Food" style="width: 100%;" class="w3-hover-opacity" />
+                    <div class="w3-container w3-white">
+                        <p><b>Babà</b></p>
+                        <p class="w3-opacity"><i>Category:Dessert</i></p>
+                        <p>
+                            A rum baba or baba au rhum is a small yeast cake saturated in syrup made with hard liquor, usually rum, and sometimes filled with whipped cream or pastry cream.
+                        </p>
+                    </div>
+                </div>
+                <div class="w3-third w3-container Italian">
+                    <img src="img/itFood8.png" alt="Food" style="width: 100%;" class="w3-hover-opacity" />
+                    <div class="w3-container w3-white">
+                        <p><b>Cannolo</b></p>
+                        <p class="w3-opacity"><i>Category:Dessert</i></p>
+                        <p>
+                            Cannoli are Italian pastries consisting of tube-shaped shells of fried pastry dough, filled with a sweet, creamy filling usually containing ricotta—a staple of Sicilian cuisine.
+                        </p>
+                    </div>
+                </div>
+                <div class="w3-third w3-container Italian">
+                    <img src="img/itFood9.png" alt="Food" style="width: 100%;" class="w3-hover-opacity" />
+                    <div class="w3-container w3-white">
+                        <p><b>Torta Caprese</b></p>
+                        <p class="w3-opacity"><i>Category:Dessert</i></p>
+                        <p>
+                            Torta caprese is a traditional Italian cake made with chocolate and either almonds or walnuts.
+                        </p>
+                    </div>
+                </div>
+                <div class="w3-third w3-container Italian">
+                    <img src="img/itFood10.png" alt="Food" style="width: 100%;" class="w3-hover-opacity" />
+                    <div class="w3-container w3-white">
+                        <p><b>Zeppola</b></p>
+                        <p class="w3-opacity"><i>Category:Dessert</i></p>
+                        <p>
+                            A zeppola is an Italian pastry consisting of a deep-fried dough ball topped with powdered sugar, and may be filled with custard, jelly, cannoli-style pastry cream, or a butter-and-honey mixture.
+                        </p>
+                    </div>
+                </div>
+                <div class="w3-third w3-container Italian">
+                    <img src="img/itFood11.png" alt="Food" style="width: 100%;" class="w3-hover-opacity" />
+                    <div class="w3-container w3-white">
+                        <p><b>Aperol Spritz</b></p>
+                        <p class="w3-opacity"><i>Category:Beverage</i></p>
+                        <p>
+                            A Spritz Veneziano or Aperol Spritz, also called just Spritz, is an Italian wine-based cocktail, commonly served as an aperitif in Northeast Italy. It consists of prosecco, Aperol and soda water.
+                        </p>
+                    </div>
+                </div>
+                <div class="w3-third w3-container Italian">
+                    <img src="img/itFood12.png" alt="Food" style="width: 100%;" class="w3-hover-opacity" />
+                    <div class="w3-container w3-white">
+                        <p><b>Martini</b></p>
+                        <p class="w3-opacity"><i>Category:Beverage</i></p>
+                        <p>
+                            The martini is a cocktail made with gin and vermouth, and garnished with an olive or a lemon twist. Over the years, the martini has become one of the best-known mixed alcoholic beverages.
+                        </p>
+                    </div>
+                </div>
+                <div class="w3-third w3-container Italian">
+                    <img src="img/itFood13.png" alt="Food" style="width: 100%;" class="w3-hover-opacity" />
+                    <div class="w3-container w3-white">
+                        <p><b>Negroni</b></p>
+                        <p class="w3-opacity"><i>Category:Beverage</i></p>
+                        <p>
+                            The Negroni is a popular Italian cocktail, made of one part gin, one part vermouth rosso (red, semi-sweet), and one part Campari, garnished with orange peel. It is considered an apéritif.
+                        </p>
+                    </div>
+                </div>
+                <div class="w3-third w3-container Italian">
+                    <img src="img/itFood14.png" alt="Food" style="width: 100%;" class="w3-hover-opacity" />
+                    <div class="w3-container w3-white">
+                        <p><b>Bellini</b></p>
+                        <p class="w3-opacity"><i>Category:Beverage</i></p>
+                        <p>
+                            A Bellini is a cocktail made with Prosecco and peach purée or nectar. It originated in Venice, Italy.
+                        </p>
+                    </div>
+                </div>
+                <div class="w3-third w3-container Italian">
+                    <img src="img/itFood15.png" alt="Food" style="width: 100%;" class="w3-hover-opacity" />
+                    <div class="w3-container w3-white">
+                        <p><b>Americano</b></p>
+                        <p class="w3-opacity"><i>Category:Beverage</i></p>
+                        <p>
+                            The Americano is a classic Italian mixed drink combination of bitter and sweet. Made with Campari and sweet vermouth, it has a lovely sunset red color.
                         </p>
                     </div>
                 </div>
