Added Italian Fashion

--- a/fashion.html
+++ b/fashion.html
@@ -62,38 +62,146 @@
             <div class="w3-row-padding">
                 <div class="w3-third w3-container w3-margin-bottom Italian">
                     <img
-                        src="https://occ-0-2794-2219.1.nflxso.net/dnm/api/v6/E8vDc_W8CLv7-yMQu8KMEC7Rrr8/AAAABen0V4YI9KHOvh9lkcDf3U3BbNnFnEunMsQPyjZXl7KxV5I6bvjgnWvsLTOPLTd2_uzrFrdhH1DeZ0wriNDV94wTxm-8.jpg?r=0bb"
+                        src="img/itFashion9.png"
                         alt="Fashion"
                         style="width: 100%;"
                         class="w3-hover-opacity"
                     />
                     <div class="w3-container w3-white">
-                        <p><b>Italian</b></p>
-                        <p>hola tum, porta lectus vitae, ultricies congue gravida diam non fringilla.</p>
+                        <p><b>Party Wear</b></p>
+                        <p class="w3-opacity"><i>Category:Women</i></p>
                     </div>
                 </div>
                 <div class="w3-third w3-container w3-margin-bottom Italian">
                     <img
-                        src="https://occ-0-2794-2219.1.nflxso.net/dnm/api/v6/E8vDc_W8CLv7-yMQu8KMEC7Rrr8/AAAABen0V4YI9KHOvh9lkcDf3U3BbNnFnEunMsQPyjZXl7KxV5I6bvjgnWvsLTOPLTd2_uzrFrdhH1DeZ0wriNDV94wTxm-8.jpg?r=0bb"
+                        src="img/itFashion2.png"
                         alt="Fashion"
                         style="width: 100%;"
                         class="w3-hover-opacity"
                     />
                     <div class="w3-container w3-white">
-                        <p><b>Italian</b></p>
-                        <p>my tincidunt sed tellus ut rutrum. Sed vitae justo condimentum, porta lectus vitae, ultricies congue gravida diam non fringilla.</p>
+                        <p><b>Party Wear</b></p>
+                        <p class="w3-opacity"><i>Category:Man</i></p>
                     </div>
                 </div>
                 <div class="w3-third w3-container Italian">
                     <img
-                        src="https://occ-0-2794-2219.1.nflxso.net/dnm/api/v6/E8vDc_W8CLv7-yMQu8KMEC7Rrr8/AAAABen0V4YI9KHOvh9lkcDf3U3BbNnFnEunMsQPyjZXl7KxV5I6bvjgnWvsLTOPLTd2_uzrFrdhH1DeZ0wriNDV94wTxm-8.jpg?r=0bb"
+                        src="img/itFashion1.png"
                         alt="Fashion"
                         style="width: 100%;"
                         class="w3-hover-opacity"
                     />
                     <div class="w3-container w3-white">
-                        <p><b>Italian</b></p>
-                        <p>hi tellus ut rutrum. Sed vitae justo condimentum, porta lectus vitae, ultricies congue gravida diam non fringilla.</p>
+                        <p><b>Casual Wear</b></p>
+                        <p class="w3-opacity"><i>Category:Man</i></p>
+                    </div>
+                </div>
+                <div class="w3-third w3-container Italian">
+                    <img
+                        src="img/itFashion3.png"
+                        alt="Fashion"
+                        style="width: 100%;"
+                        class="w3-hover-opacity"
+                    />
+                    <div class="w3-container w3-white">
+                        <p><b>Casual Wear</b></p>
+                        <p class="w3-opacity"><i>Category:Man</i></p>
+                    </div>
+                </div>
+                <div class="w3-third w3-container Italian">
+                    <img
+                        src="img/itFashion4.png"
+                        alt="Fashion"
+                        style="width: 100%;"
+                        class="w3-hover-opacity"
+                    />
+                    <div class="w3-container w3-white">
+                        <p><b>Casual Wear</b></p>
+                        <p class="w3-opacity"><i>Category:Man</i></p>
+                    </div>
+                </div>
+                <div class="w3-third w3-container Italian">
+                    <img
+                        src="img/itFashion5.png"
+                        alt="Fashion"
+                        style="width: 100%;"
+                        class="w3-hover-opacity"
+                    />
+                    <div class="w3-container w3-white">
+                        <p><b>Casual Wear</b></p>
+                        <p class="w3-opacity"><i>Category:Man</i></p>
+                    </div>
+                </div>
+                <div class="w3-third w3-container Italian">
+                    <img
+                        src="img/itFashion8.png"
+                        alt="Fashion"
+                        style="width: 100%;"
+                        class="w3-hover-opacity"
+                    />
+                    <div class="w3-container w3-white">
+                        <p><b>Casual Wear</b></p>
+                        <p class="w3-opacity"><i>Category:Woman</i></p>
+                    </div>
+                </div>
+                <div class="w3-third w3-container Italian">
+                    <img
+                        src="img/itFashion6.png"
+                        alt="Fashion"
+                        style="width: 100%;"
+                        class="w3-hover-opacity"
+                    />
+                    <div class="w3-container w3-white">
+                        <p><b>Party Wear</b></p>
+                        <p class="w3-opacity"><i>Category:Man</i></p>
+                    </div>
+                </div>
+                <div class="w3-third w3-container Italian">
+                    <img
+                        src="img/itFashion7.png"
+                        alt="Fashion"
+                        style="width: 100%;"
+                        class="w3-hover-opacity"
+                    />
+                    <div class="w3-container w3-white">
+                        <p><b>Casual Wear</b></p>
+                        <p class="w3-opacity"><i>Category:Man</i></p>
+                    </div>
+                </div>
+                <div class="w3-third w3-container Italian">
+                    <img
+                        src="img/itFashion10.png"
+                        alt="Fashion"
+                        style="width: 100%;"
+                        class="w3-hover-opacity"
+                    />
+                    <div class="w3-container w3-white">
+                        <p><b>Party Wear</b></p>
+                        <p class="w3-opacity"><i>Category:Woman</i></p>
+                    </div>
+                </div>
+                <div class="w3-third w3-container Italian">
+                    <img
+                        src="img/itFashion11.png"
+                        alt="Fashion"
+                        style="width: 100%;"
+                        class="w3-hover-opacity"
+                    />
+                    <div class="w3-container w3-white">
+                        <p><b>Wedding Wear</b></p>
+                        <p class="w3-opacity"><i>Category:Woman</i></p>
+                    </div>
+                </div>
+                <div class="w3-third w3-container Italian">
+                    <img
+                        src="img/itFashion12.png"
+                        alt="Fashion"
+                        style="width: 100%;"
+                        class="w3-hover-opacity"
+                    />
+                    <div class="w3-container w3-white">
+                        <p><b>Wedding Wear</b></p>
+                        <p class="w3-opacity"><i>Category:Man</i></p>
                     </div>
                 </div>
             </div>
