Added Italian Places

--- a/place.html
+++ b/place.html
@@ -61,36 +61,101 @@
                 </div>
             </div>
 
-            <!-- First Photo Grid-->
-            <div class="w3-row-padding">
+             <!-- Italian places Start here-->
+             <div class="w3-row-padding">
                 <div class="w3-third w3-container w3-margin-bottom Italian">
-                    <img src="https://d25rq8gxcq0p71.cloudfront.net/dictionary-images/324/nature.jpg" alt="Place" style="width: 100%;" class="w3-hover-opacity" />
-                    <div class="w3-container w3-white">
-                        <p><b>Italian</b></p>
-                        <p>
-                            hola tum, porta lectus vitae, ultricies congue gravida diam non fringilla.
-                        </p>
-                    </div>
-                </div>
-                <div class="w3-third w3-container w3-margin-bottom Italian">
-                    <img src="https://d25rq8gxcq0p71.cloudfront.net/dictionary-images/324/nature.jpg" alt="Norway" style="width: 100%;" class="w3-hover-opacity" />
-                    <div class="w3-container w3-white">
-                        <p><b>Italian</b></p>
-                        <p>
-                            my tincidunt sed tellus ut rutrum. Sed vitae justo condimentum, porta lectus vitae, ultricies congue gravida diam non fringilla.
-                        </p>
-                    </div>
-                </div>
-                <div class="w3-third w3-container Italian">
-                    <img src="https://d25rq8gxcq0p71.cloudfront.net/dictionary-images/324/nature.jpg" alt="Place" style="width: 100%;" class="w3-hover-opacity" />
-                    <div class="w3-container w3-white">
-                        <p><b>Italian</b></p>
-                        <p>
-                            hi tellus ut rutrum. Sed vitae justo condimentum, porta lectus vitae, ultricies congue gravida diam non fringilla.
-                        </p>
-                    </div>
-                </div>
-            </div>
+                      <img src="img/itPlace1.png" alt="Place" style="width: 100%;" class="w3-hover-opacity" />
+                           <div class="w3-container w3-white">
+                           <p><b>Colosseo</b></p>
+                            </div>
+                        </div>
+            <div class="w3-third w3-container w3-margin-bottom Italian">
+                       <img src="img/itPlace2.png" alt="Place" style="width: 100%;" class="w3-hover-opacity" />
+                            <div class="w3-container w3-white">
+                            <p><b>Arena di Verona</b></p>
+                            </div>
+                      </div>
+                            <div class="w3-third w3-container w3-margin-bottom Italian">
+                                <img src="img/itPlace3.png" alt="Place" style="width: 100%;" class="w3-hover-opacity" />
+                                <div class="w3-container w3-white">
+                                    <p><b>Torre di Pisa</b></p>
+                                </div>
+                            </div>
+                            <div class="w3-third w3-container w3-margin-bottom Italian">
+                                <img src="img/itPlace4.png" alt="Place" style="width: 100%;" class="w3-hover-opacity" />
+                                <div class="w3-container w3-white">
+                                    <p><b>Cappella di Brunelleschi</b></p>
+                                </div>
+                            </div>
+                            <div class="w3-third w3-container w3-margin-bottom Italian">
+                                <img src="img/itPlace5.png" alt="Place" style="width: 100%;" class="w3-hover-opacity" />
+                                <div class="w3-container w3-white">
+                                    <p><b>Castel dell'Ovo</b></p>
+                                </div>
+                            </div>
+                            <div class="w3-third w3-container w3-margin-bottom Italian">
+                                <img src="img/itPlace6.png" alt="Place" style="width: 100%;" class="w3-hover-opacity" />
+                                <div class="w3-container w3-white">
+                                    <p><b>Isola di Capri</b></p>
+                                </div>
+                            </div>
+                            <div class="w3-third w3-container w3-margin-bottom Italian">
+                                <img src="img/itPlace7.png" alt="Place" style="width: 100%;" class="w3-hover-opacity" />
+                                <div class="w3-container w3-white">
+                                    <p><b>Duomo di Milano </b></p>
+                                </div>
+                            </div>
+                            <div class="w3-third w3-container w3-margin-bottom Italian">
+                                <img src="img/itPlace8.png" alt="Place" style="width: 100%;" class="w3-hover-opacity" />
+                                <div class="w3-container w3-white">
+                                    <p><b>Dolomiti</b></p>
+                                </div>
+                            </div>
+                            <div class="w3-third w3-container w3-margin-bottom Italian">
+                                <img src="img/itPlace9.png" alt="Place" style="width: 100%;" class="w3-hover-opacity" />
+                                <div class="w3-container w3-white">
+                                    <p><b>Reggia di Caserta</b></p>
+                                </div>
+                            </div>
+                            <div class="w3-third w3-container w3-margin-bottom Italian">
+                                <img src="img/itPlace10.png" alt="Place" style="width: 100%;" class="w3-hover-opacity" />
+                                <div class="w3-container w3-white">
+                                    <p><b>Trulli di Alberobello</b></p>
+                                </div>
+                            </div>
+                            <div class="w3-third w3-container w3-margin-bottom Italian">
+                                <img src="img/itPlace11.png" alt="Place" style="width: 100%;" class="w3-hover-opacity" />
+                                <div class="w3-container w3-white">
+                                    <p><b>Baia dei Turchi</b></p>
+                                </div>
+                            </div>
+                            <div class="w3-third w3-container w3-margin-bottom Italian">
+                                <img src="img/itPlace12.png" alt="Place" style="width: 100%;" class="w3-hover-opacity" />
+                                <div class="w3-container w3-white">
+                                    <p><b>Venezia</b></p>
+                                </div>
+                            </div>
+                            <div class="w3-third w3-container w3-margin-bottom Italian">
+                                <img src="img/itPlace13.png" alt="Place" style="width: 100%;" class="w3-hover-opacity" />
+                                <div class="w3-container w3-white">
+                                    <p><b>Cappella dei mercanti</b></p>
+                                </div>
+                            </div>
+                            <div class="w3-third w3-container w3-margin-bottom Italian">
+                                <img src="img/itPlace14.png" alt="Place" style="width: 100%;" class="w3-hover-opacity" />
+                                <div class="w3-container w3-white">
+                                    <p><b>Piazza maggiore</b></p>
+                                </div>
+                            </div>
+                            <div class="w3-third w3-container Italian">
+                                <img src="img/itPlace15.png" alt="Place" style="width: 100%;" class="w3-hover-opacity" />
+                                <div class="w3-container w3-white">
+                                    <p><b>Costa smeralda</b></p>
+                                </div>
+                            </div>
+                        </div>
+                        <!-- Italian Places End Here-->
+
 
             <!-- Pakistani places Start here-->
             <div class="w3-row-padding">
